--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="half-width">
-        <img src="images/jhankar.png" alt="profle" />
+        <img id="munna" src="images/img-2.png" alt="profle" />
       </div>
     </section>
     <section class="dream-bg full-package">
